--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.9.1",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.4.0",
     "antd": "^3.0.3",
     "antd-local-icon": "^0.1.3",
     "auth0-lock": "^11.1.2",
@@ -21,6 +22,7 @@
     "history": "^4.6.3",
     "immutable": "^3.8.1",
     "immutable-devtools": "0.0.7",
+    "jquery": "^3.3.1",
     "js-info-bubble": "git+https://github.com/RedQ/js-info-bubble.git",
     "js-rich-marker": "^1.1.2",
     "lodash": "^4.17.4",
@@ -32,6 +34,7 @@
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.5.2",
     "react-big-calendar": "^0.17.0",
+    "react-bootstrap-table": "^4.3.1",
     "react-chartjs-2": "^2.5.7",
     "react-codemirror": "^1.0.0",
     "react-count-down": "^1.1.0",
@@ -51,6 +54,7 @@
     "react-intl": "^2.3.0",
     "react-ladda": "^5.0.6",
     "react-motion-drawer": "^2.1.7",
+    "react-newline-to-break": "^1.0.6",
     "react-perfect-scrollbar": "^0.2.0",
     "react-placeholder": "^2.0.0",
     "react-quill": "^1.2.0",
