--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-instantsearch": "^4.0.7",
     "react-intl": "^2.3.0",
     "react-ladda": "^5.0.6",
+    "react-live-clock": "^2.0.3",
     "react-motion-drawer": "^2.1.7",
     "react-newline-to-break": "^1.0.6",
     "react-perfect-scrollbar": "^0.2.0",
