--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.5.2",
     "react-big-calendar": "^0.17.0",
+    "react-bootstrap": "^0.32.1",
     "react-bootstrap-table": "^4.3.1",
     "react-chartjs-2": "^2.5.7",
     "react-codemirror": "^1.0.0",
